CollectionBulkLoader does not anticipate exceptions from MultiIndexBlock

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v4.2, v4.0
    • Repl 2019-09-09
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Currently, CollectionBulkLoaderImpl uses CollectionBulkLoaderImpl::_runTaskReleaseResourcesOnFailure() to wrap function calls into other components such as the MultiIndexBlock index builder component. CollectionBulkLoaderImpl::_runTaskReleaseResourcesOnFailure() assumes no exceptions will reach its top level, since it catches all exceptions and immediately calls std::terminate() when they are caught.

      Since some MultiIndexBlock functions can uassert, I believe we ought to convert exceptions into Statuses either in CollectionBulkLoaderImpl at its call sites, or within the MultiIndexBlock functions themselves.

            Assignee:
            Mihai Andrei
            Reporter:
            Eric Milkie
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: