SERVER-41918 CollectionBulkLoader does not anticipate exceptions from MultiIndexBlock